fix(scss/pages/): swap yellow and gray colors for divs, change theme hover color on mobile

--- a/src/scss/pages/_mobile.scss
+++ b/src/scss/pages/_mobile.scss
@@ -101,11 +101,11 @@
     grid-row: 27 / 31;
 
     @include on-event {
-      background-color: var(--color-yellow);
+      background-color: var(--color-fg);
 
       > span {
-        --icon-fill: var(--color-black);
-        --icon-fill-hover: var(--color-black);
+        --icon-fill: var(--color-bg);
+        --icon-fill-hover: var(--color-bg);
       }
     }
   }
